feat: cria component Card que será inserido o livro e suas descrições

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,8 +1,13 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+body {
+  background: #312E38;
+  color: #FFF;
+  -webkit-font-smoothing: antialiased;
 }
 
 .logo {
